<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="#0E38AE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/nameTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/nameTitleTextView" />

    <TextView
        android:id="@+id/genderTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/gender"
        android:textColor="#C11A1A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTitleTextView" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/genderTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/genderTitleTextView" />

    <TextView
        android:id="@+id/countStarshipsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/countStarships"
        android:textColor="#1BD61E"
        app:layout_constraintEnd_toStartOf="@+id/countStarshipsTextView"
        app:layout_constraintTop_toTopOf="@+id/countStarshipsTextView" />

    <TextView
        android:id="@+id/countStarshipsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addToFavoritesButton" />

    <Button
        android:id="@+id/addToFavoritesButton"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="onAddToFavoritesButtonClick"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>